--- a/hypr/config/settings.conf
+++ b/hypr/config/settings.conf
@@ -10,6 +10,8 @@ general {
 }
 
 misc {
+  vfr = true
+  vrr = 1
   layers_hog_keyboard_focus = false
   disable_splash_rendering = true
   disable_hyprland_logo = true
