--- a/hypr/config/autorun.conf
+++ b/hypr/config/autorun.conf
@@ -1,4 +1,5 @@
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dunst
 exec-once = ~/.config/hypr/config/scripts/start-portal.sh
 exec-once = waybar
@@ -7,3 +8,5 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = gammastep -l 50.41166326080394:30.548947596630445 -b 1:0.9 -t 6500K:3500K
 exec-once = nm-applet
+exec-once = [workspace 1 silent] google-chrome-stable
+exec-once = [workspace 4 silent] telegram-desktop 
