--- a/hypr/config/monitors.conf
+++ b/hypr/config/monitors.conf
@@ -1,4 +1,4 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=DP-1,highres,auto,1.5
+monitor=DP-1,preferred,auto,1.5
 monitor=eDP-1,disable
