--- a/hypr/config/theme.conf
+++ b/hypr/config/theme.conf
@@ -1,30 +1,24 @@
 decoration {
-  drop_shadow = yes
+  drop_shadow = false
   shadow_range = 8
   shadow_render_power = 2
   col.shadow = rgba(00000044)
-
   dim_inactive = false
 
   blur {
     enabled = true
-    size = 8
+    new_optimizations = true
+    size = 6
     passes = 3
-    new_optimizations = on
-    noise = 0.01
-    contrast = 0.9
-    brightness = 0.8
   }
 }
 
 animations {
-  enabled = yes
-  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-  animation = windows, 1, 5, myBezier
-  animation = windowsOut, 1, 7, default, popin 80%
-  animation = border, 1, 10, default
+  enabled = true
+  bezier = easeInOutQuint, 0.33, 1, 0.68, 1
+  animation = workspaces,1,4,default,slidefade
+  animation = windows,1,4,easeInOutQuint,slide
   animation = fade, 1, 7, default
-  animation = workspaces, 1, 6, default
 }
 
 plugin {
